--- a/src/client/src/app/map/map.component.html
+++ b/src/client/src/app/map/map.component.html
@@ -713,11 +713,11 @@
 											</h6>
 										</mat-expansion-panel-header>
 										<div>
-											<img *ngIf="layerPastureShow == 'areas-pastagens'" src="http://o4.lapig.iesa.ufg.br/ows?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture&format=image%2Fpng">
-											<img *ngIf="layerPastureShow == 'municipios-pastagens'" src="http://ows.lapig.iesa.ufg.br/ows?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture_regions_municipios&format=image%2Fpng">
-											<img *ngIf="layerPastureShow == 'pastagens-todas-transicoes'" src="http://ows.lapig.iesa.ufg.br/ows?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture_all_transitions&format=image%2Fpng">
-											<img *ngIf="layerPastureShow == 'pastagens-uma-transicao'" src="http://ows.lapig.iesa.ufg.br/ows?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture_one_transitions&format=image%2Fpng">
-											<img *ngIf="layerPastureShow == 'pastagens-zero-transicao'" src="http://ows.lapig.iesa.ufg.br/ows?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture_zero_transitions&format=image%2Fpng">
+											<img *ngIf="layerPastureShow == 'areas-pastagens'" [src]=" env.ows + '?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture&format=image%2Fpng'">
+											<img *ngIf="layerPastureShow == 'municipios-pastagens'" [src]=" env.ows + '?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture_regions_municipios&format=image%2Fpng'">
+											<img *ngIf="layerPastureShow == 'pastagens-todas-transicoes'" [src]=" env.ows + '?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture_all_transitions&format=image%2Fpng'">
+											<img *ngIf="layerPastureShow == 'pastagens-uma-transicao'" [src]=" env.ows + '?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture_one_transitions&format=image%2Fpng'">
+											<img *ngIf="layerPastureShow == 'pastagens-zero-transicao'" [src]=" env.ows + '?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture_zero_transitions&format=image%2Fpng'">
 										</div>
 									</mat-expansion-panel>
 		      			</div>
@@ -738,10 +738,10 @@
                     </mat-expansion-panel-header>
                     <div class="legend-img">
                       <div>
-                        <img *ngIf="layerPastureCarbonShow == 'pasture_carbon_aglivc'" src="http://o4.lapig.iesa.ufg.br/ows?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture_carbon_aglivc&format=image%2Fpng">
-                        <img *ngIf="layerPastureCarbonShow == 'pasture_carbon_bglivs'" src="http://ows.lapig.iesa.ufg.br/ows?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture_carbon_bglivs&format=image%2Fpng">
-                        <img *ngIf="layerPastureCarbonShow == 'pasture_carbon_stdeadc'" src="http://ows.lapig.iesa.ufg.br/ows?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture_carbon_stdeadc&format=image%2Fpng">
-                        <img *ngIf="layerPastureCarbonShow == 'pasture_carbon_somsc'" src="http://ows.lapig.iesa.ufg.br/ows?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture_carbon_somsc&format=image%2Fpng">
+                        <img *ngIf="layerPastureCarbonShow == 'pasture_carbon_aglivc'" [src]=" env.ows + '?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture_carbon_aglivc&format=image%2Fpng'">
+                        <img *ngIf="layerPastureCarbonShow == 'pasture_carbon_bglivs'" [src]=" env.ows + '?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture_carbon_bglivs&format=image%2Fpng'">
+                        <img *ngIf="layerPastureCarbonShow == 'pasture_carbon_stdeadc'" [src]=" env.ows + '?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture_carbon_stdeadc&format=image%2Fpng'">
+                        <img *ngIf="layerPastureCarbonShow == 'pasture_carbon_somsc'" [src]=" env.ows + '?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture_carbon_somsc&format=image%2Fpng'">
                         <br><small>valores em MgC.ha<sup>-1</sup></small>
                       </div>
                     </div>
@@ -762,9 +762,9 @@
                       </h6>
                     </mat-expansion-panel-header>
                     <div>
-                      <!-- <img *ngIf="layerPastureDegradedShow == 'areas-pastagens-degraded'" src="http://ows.lapig.iesa.ufg.br/ows?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture_degraded&format=image%2Fpng"> -->
-                      <!-- <img *ngIf="layerPastureDegradedShow == 'municipios-pastagens-degraded'" src="http://ows.lapig.iesa.ufg.br/ows?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture_degraded_regions_municipios&format=image%2Fpng"> -->
-                      <img *ngIf="layerPastureDegradedShow == 'pasture_quality'" src="http://ows.lapig.iesa.ufg.br/ows?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture_quality&format=image%2Fpng">
+                      <!-- <img *ngIf="layerPastureDegradedShow == 'areas-pastagens-degraded'" [src]=" env.ows + '?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture_degraded&format=image%2Fpng'"> -->
+                      <!-- <img *ngIf="layerPastureDegradedShow == 'municipios-pastagens-degraded'" [src]=" env.ows + '?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture_degraded_regions_municipios&format=image%2Fpng'"> -->
+                      <img *ngIf="layerPastureDegradedShow == 'pasture_quality'" [src]=" env.ows + '?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture_quality&format=image%2Fpng'">
                     </div>
                   </mat-expansion-panel>
                 </div>
@@ -785,7 +785,7 @@
 											</div>
 										</mat-expansion-panel-header>
 										<div>
-											<img src="http://ows.lapig.iesa.ufg.br/ows?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=lotacao_bovina_regions&format=image%2Fpng">
+											<img [src]=" env.ows + '?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=lotacao_bovina_regions&format=image%2Fpng'">
 										</div>
 									</mat-expansion-panel>
 			      		</div>
@@ -806,7 +806,7 @@
 											</div>
 										</mat-expansion-panel-header>
 										<div>
-											<img src="http://ows.lapig.iesa.ufg.br/ows?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=potencial_intensificacao_pecuaria&format=image%2Fpng">
+											<img [src]=" env.ows + '?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=potencial_intensificacao_pecuaria&format=image%2Fpng'">
 										</div>
 									</mat-expansion-panel>
 			      		</div>
@@ -827,7 +827,7 @@
 											</div>
 										</mat-expansion-panel-header>
 										<div>
-											<img src="http://ows.lapig.iesa.ufg.br/ows?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pontos_campo_sem_parada&format=image%2Fpng">
+											<img [src]=" env.ows + '?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pontos_campo_sem_parada&format=image%2Fpng'">
 										</div>
 									</mat-expansion-panel>
 			      		</div>
@@ -848,8 +848,8 @@
 											</div>
 										</mat-expansion-panel-header>
 										<div>
-											<img *ngIf="layerPointTVIShow == 'treinamento'" src="http://o4.lapig.iesa.ufg.br/ows?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pontos_tvi_treinamento&format=image%2Fpng">
-											<img *ngIf="layerPointTVIShow == 'validacao'" src="http://ows.lapig.iesa.ufg.br/ows?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pontos_tvi_validacao&format=image%2Fpng">
+											<img *ngIf="layerPointTVIShow == 'treinamento'" [src]=" env.ows + '?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pontos_tvi_treinamento&format=image%2Fpng'">
+											<img *ngIf="layerPointTVIShow == 'validacao'" [src]=" env.ows + '?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pontos_tvi_validacao&format=image%2Fpng'">
 										</div>
 									</mat-expansion-panel>
 			      		</div>
