--- a/src/client/src/app/site/pages/base/base.component.html
+++ b/src/client/src/app/site/pages/base/base.component.html
@@ -3,7 +3,7 @@
   <div class="container">
     <nav class="navbar navbar-expand-lg stroke">
       <a class="navbar-brand" href="/">
-        <img src="assets/site/images/logos/logo_cor_grafismo.png" alt="Atlas das Pastagens"
+        <img src="assets/site/images/logos/logo_branco.png" alt="Atlas das Pastagens"
              title="Atlas das Pastagens Brasileiras"/>
       </a>
       <button class="navbar-toggler  collapsed bg-gradient" type="button" data-toggle="collapse"
@@ -78,7 +78,7 @@
       <div class="columns">
         <img src="assets/site/images/logos/logo_branco.png" alt="Atlas das Pastagens"
              title="Atlas das Pastagens Brasileiras"/>
-        <p>© {{ year }} Atlas das Pastagens. Todos os direitos reservados.
+        <p>© {{ year }} Atlas das Pastagens Brasileiras. Todos os direitos reservados.
         </p>
       </div>
     </div>
