--- a/src/client/src/app/site/pages/index/index.component.html
+++ b/src/client/src/app/site/pages/index/index.component.html
@@ -2,16 +2,13 @@
   <!-- banner section -->
   <section class="banner-19">
     <div class="banner-layer">
-      <div id="myVideo" class="vimeo-wrapper">
-        <div id="video"></div>
-      </div>
       <div class="main-content-top">
         <div class="container">
           <div class="main-content abstract">
             <img src="assets/site/images/logos/logo_cor.svg" alt="Atlas das Pastagens"
                  title="Atlas das Pastagens Brasileiras"/>
             <p class="mt-3 ">Uma plataforma, online e gratuita, desenvolvida e mantida pelo Lapig/UFG, para tornar acessível os resultados das pesquisas desenvolvidas no âmbito das pastagens brasileiras.</p>
-            <a href="/map" class="btn btn-style mt-md-5 mt-4">Acesse a Plataforma</a>
+            <a href="https://plataformbase.lapig.iesa.ufg.br/" class="btn btn-style mt-md-5 mt-4">Acesse a Plataforma</a>
           </div>
         </div>
       </div>
@@ -23,7 +20,9 @@
     <div class="container py-lg-5 py-sm-4">
       <div class="row align-items-center">
         <div class="col-lg-6 content-image order-lg-first order-last">
-          <a href="/"><img src="assets/site/images/sobre.jpg" class="img-responsive" alt="content-photo"></a>
+          <iframe src="https://www.youtube.com/embed/ZZnHtkblmro" width="100%" height="400" title="Atlas das Pastagens" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen></iframe>
         </div>
         <div class="col-lg-6 col-md-10 mx-auto content-right mb-lg-0 mb-5 pl-lg-5 order-lg-last order-first">
           <h3 class="title-style-2">Atlas das pastagens</h3>
@@ -41,9 +40,7 @@
 
           <!-- dialog itself, mfp-hide class is required to make dialog hidden -->
           <div id="small-dialog" class="zoom-anim-dialog mfp-hide">
-            <iframe src="https://www.youtube.com/embed/wW5QMHM0bz8" title="Pastagem" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
+
           </div>
         </div>
       </div>
