--- a/src/client/src/app/site/pages/index/index.component.html
+++ b/src/client/src/app/site/pages/index/index.component.html
@@ -65,7 +65,7 @@
             </div>
             <div class="card-body service-details">
               <a target="_blank" href="assets/site/images/metodos/Metadados - Mapeamento da qualidade das pastagens brasiliera - OliveriaSantosC.pdf" class="service-heading">Áreas de pastagem</a>
-              <p>Conjunto de dados que compreende uma série temporal composta por mapas anuais das pastagens brasileiras abrangendo o período de 1985 a 2019. O mapeamento foi baseado em dados Landsat, classificados de modo não supervisionado por meio do Random Forest, na plataforma Earth Engine da Google;
+              <p>Conjunto de dados que compreende uma série temporal composta por mapas anuais das pastagens brasileiras abrangendo o período de 1985 a 2020. O mapeamento foi baseado em dados Landsat, classificados de modo não supervisionado por meio do Random Forest, na plataforma Earth Engine da Google;
               </p>
             </div>
           </div>
@@ -90,7 +90,8 @@
             </div>
             <div class="card-body service-details">
               <a target="_blank" href="assets/site/images/metodos/Metadados - Mapeamento da qualidade das pastagens brasiliera - OliveriaSantosC.pdf" class="service-heading">Estoque de carbono </a>
-              <p>Esse conjunto de dados é parte de um experimento para avaliação do uso de modelos baseados em ciclagem biogeoquímica na estimativas do estoque de carbono em pastagens em larga escala. Contendo estimativas do estoque de carbono no solo, nas raízes e na biomassa aérea das pastagens do bioma Cerrado.
+              <p>
+                Esse conjunto de dados é parte de um experimento para avaliação do uso de modelos baseados em ciclagem biogeoquímica na estimativas do estoque de carbono em pastagens em larga escala. Contendo estimativas do estoque de carbono no solo, nas raízes e na biomassa aérea das pastagens do bioma Cerrado.
               </p>
             </div>
           </div>
@@ -277,16 +278,17 @@
         <h3 class="title-w3l">Diferencial</h3>
         <p class="mt-3 text-white">
           Na plataforma, o usuário pode visualizar de forma geograficamente espacializada, as áreas ocupadas por pastagens no período entre 1985 e 2019,
-          e observar graficamente a evolução das pastagens (~121 milhões de hectares em 1985 para ~171 milhões em 2019)
-          e do rebanho bovino (~98 milhões de unidades animais em 1985 para ~158 milhões em 2019).
+          e observar graficamente a evolução das pastagens (~121 milhões de hectares em 1985 para ~171 milhões em 2019) e do rebanho bovino
+          (~98 milhões de unidades animais em 1985 para ~158 milhões em 2019).
         </p>
         <p class="mt-2 text-white">
-          Para os anos de 2010 e 2018, o usuário pode visualizar e comparar a qualidade das pastagens brasileiras, que foram classificadas em três classes de acordo com sua condição nos respectivos anos: (a) degradação severa;
+          Para os anos de 2010 e 2018, o usuário pode visualizar e comparar a qualidade das pastagens brasileiras,
+          que foram classificadas em três classes de acordo com sua condição nos respectivos anos: (a) degradação severa;
           (b) degradação intermediária; e (c) degradação ausente ou pastagens em boa condição.
         </p>
         <p class="mt-2 text-white">
-          Além da visualização de todas as bases de dados disponíveis na plataforma,
-          os dados estão disponíveis para download em formato geo-espacializado (shapefile) ou tabela (csv), sendo os dados abertos um dos diferenciais da plataforma.
+          Além da visualização de todas as bases de dados disponíveis na plataforma, os dados estão disponíveis para download em formato geo-espacializado
+          (shapefile) ou tabela (csv), sendo os dados abertos um dos diferenciais da plataforma.
         </p>
       </div>
     </div>
