--- a/src/client/src/app/site/pages/metodos/metodos.component.html
+++ b/src/client/src/app/site/pages/metodos/metodos.component.html
@@ -12,8 +12,6 @@
     </div>
   </section>
   <!-- //inner banner -->
-
-  <!-- services section -->
   <div class="service-section py-5">
     <div class="container py-md-5 py-4">
       <div class="row align-items-center mb-5">
@@ -30,7 +28,8 @@
               </div>
               <div class="card-body service-details">
                 <a target="_blank" href="assets/site/images/metodos/Metadados - Mapeamento da qualidade das pastagens brasiliera - OliveriaSantosC.pdf" class="service-heading">Áreas de pastagem</a>
-                <p>Conjunto de dados que compreende uma série temporal composta por mapas anuais das pastagens brasileiras abrangendo o período de 1985 a 2019. O mapeamento foi baseado em dados Landsat, classificados de modo não supervisionado por meio do Random Forest, na plataforma Earth Engine da Google;
+                <p>
+                  Conjunto de dados que compreende uma série temporal composta por mapas anuais das pastagens brasileiras abrangendo o período de 1985 a 2020. O mapeamento foi baseado em dados Landsat, classificados de modo não supervisionado por meio do Random Forest, na plataforma Earth Engine da Google;
                 </p>
               </div>
             </a>
@@ -44,7 +43,10 @@
               </div>
               <div class="card-body service-details">
                 <a target="_blank" href="assets/site/images/metodos/Metadados - Mapeamento da qualidade das pastagens brasiliera - OliveriaSantosC.pdf" class="service-heading">Qualidade das pastagens</a>
-                <p>Compreende o mapeamento da qualidade das pastagens brasileiras, tomando por referência de áreas de pastagens o conjunto de dados “Áreas de Pastagens”. Por meio de índices de vegetação obtidos por sensoriamento remoto, as pastagens brasileiras foram classificadas em três níveis de degradação (Ausente, Intermediário e Severa), para os anos de 2010 e 2018;</p>
+                <p>
+                  Compreende o mapeamento da qualidade das pastagens brasileiras, tomando por referência de áreas de pastagens o conjunto de dados “Áreas de Pastagens”.
+                  Por meio de índices de vegetação obtidos por sensoriamento remoto, as pastagens brasileiras foram classificadas em três níveis de degradação (Ausente, Intermediário e Severa), para os anos de 2010 e 2018;
+                </p>
               </div>
             </a>
           </div>
@@ -58,8 +60,10 @@
                 </a>
               </div>
               <div class="card-body service-details">
-                <a target="_blank" href="assets/site/images/metodos/Metadados - Mapeamento da qualidade das pastagens brasiliera - OliveriaSantosC.pdf" class="service-heading">Estoque de carbono </a>
-                <p>Esse conjunto de dados é parte de um experimento para avaliação do uso de modelos baseados em ciclagem biogeoquímica na estimativas do estoque de carbono em pastagens em larga escala. Contendo estimativas do estoque de carbono no solo, nas raízes e na biomassa aérea das pastagens do bioma Cerrado.
+                <a target="_blank" href="assets/site/images/metodos/Metadados - Mapeamento da qualidade das pastagens brasiliera - OliveriaSantosC.pdf" class="service-heading">Estoque de carbono nas pastagens</a>
+                <p>
+                  Esse conjunto de dados é parte de um experimento para avaliação do uso de modelos baseados em ciclagem biogeoquímica na estimativas do estoque de carbono em pastagens em larga escala.
+                  Contendo estimativas do estoque de carbono no solo, nas raízes e na biomassa aérea das pastagens do bioma Cerrado.
                 </p>
               </div>
             </a>
@@ -75,7 +79,9 @@
               </div>
               <div class="card-body service-details">
                 <a target="_blank" href="assets/site/images/metodos/Metadados - Mapeamento da qualidade das pastagens brasiliera - OliveriaSantosC.pdf" class="service-heading">Rebanho bovino</a>
-                <p>Série temporal do rebanho bovino por município, abrangendo o período de 1985 a 2019. Esse conjunto de dados é disponibilizado em Unidade Animal (UA) para cada município brasileiro, calculados por meio de uma análise integrada de dados da Pesquisa Pecuária Municipal (PPM) e da composição do rebanho bovino (Censo Agropecuário), ambos disponibilizados pelo IBGE;
+                <p>
+                  Série temporal do rebanho bovino por município, abrangendo o período de 1985 a 2019.
+                  Disponibilizado em Unidade Animal (UA), calculadas a partir do rebanho bovino em cada município.
                 </p>
               </div>
             </a>
@@ -89,7 +95,10 @@
               </div>
               <div class="card-body service-details">
                 <a target="_blank" href="assets/site/images/metodos/Metadados - Mapeamento da qualidade das pastagens brasiliera - OliveriaSantosC.pdf" class="service-heading">Pontos inspecionados visualmente</a>
-                <p>Conjunto georreferenciado de pontos para todo o território brasileiro, sendo atribuídas classes de uso e cobertura do solo referente a cada ano no período de 1985 a 2017. Foram utilizadas imagens Landsat provenientes dos sensores TM, ETM+ e OLI. Buscou-se também abordar os critérios adotados, dificuldades e especificidades encontradas quanto à interpretação de imagens em cada um dos 6 biomas brasileiros;</p>
+                <p>
+                  Conjunto georreferenciado de pontos para todo o território brasileiro, classificados anualmente a partir de 1985, por meio de inspeção visual.
+                </p>
+                <p> &nbsp;</p>
               </div>
             </a>
           </div>
@@ -102,7 +111,10 @@
               </div>
               <div class="card-body service-details">
                 <a target="_blank" href="assets/site/images/metodos/Metadados - Mapeamento da qualidade das pastagens brasiliera - OliveriaSantosC.pdf" class="service-heading">Pontos de campo</a>
-                <p>Com o propósito de validar mapas produzidos pelo LAPIG-UFG no âmbito do MapBiomas e de subsidiar pesquisas voltadas à qualificação das pastagens brasileiras, seis atividades de campo foram realizadas durante os anos de 2017 e 2018. Um grande conjunto de pontos georreferenciados foi formado e organizado com dados de uso/cobertura do solo e indicativos de qualidade das pastagens;</p>
+                <p>
+                  Pontos de uso e cobertura da terra amostrados e avaliados em campo, com o propósito de validar mapas de áreas ocupadas por pastagens produzidos pelo Lapig-UFG.
+                </p>
+                <p> &nbsp;</p>
               </div>
             </a>
           </div>
@@ -110,6 +122,4 @@
       </div>
     </div>
   </div>
-  <!-- //services section -->
-
 </app-site-base>
