--- a/src/client/src/app/site/pages/sobre/sobre.component.html
+++ b/src/client/src/app/site/pages/sobre/sobre.component.html
@@ -26,9 +26,12 @@
           </div>
 
           <div class="single-post-content">
-            <p class="mb-4">O Atlas das Pastagens é uma plataforma, online e gratuita, desenvolvida e mantida pelo Laboratório de Processamento de Imagens e Geoprocessamento (Lapig/UFG), para tornar acessível os resultados das pesquisas desenvolvidas no âmbito das pastagens brasileiras.
+            <p class="mb-4">
+              O Atlas das Pastagens é uma plataforma, online e gratuita, desenvolvida e mantida pelo Laboratório de Processamento de Imagens e Geoprocessamento (Lapig/UFG), para tornar acessível os resultados das pesquisas desenvolvidas no âmbito das pastagens brasileiras.
             </p>
-            <p class="mb-4">A plataforma disponibiliza, atualmente, seis bases de dados: (1) mapeamento das áreas ocupadas por pastagens no Brasil; (2) mapeamento da qualidade dessas áreas, estimativas do estoque de carbono nas pastagens do bioma Cerrado; (3) informações do rebanho bovino brasileiro analisadas a partir dos dados da pesquisa pecuária municipal (IBGE); (4) séries temporais de classificação de uso e cobertura da terra por inspeção visual de dados dos satélites Landsat; (5) avaliação da condição das pastagens em campanhas de campo realizadas por equipes do laboratório.</p>
+            <p class="mb-4">
+              A plataforma disponibiliza, atualmente, seis bases de dados: (1) mapeamento das áreas ocupadas por pastagens no Brasil; (2) mapeamento da qualidade dessas áreas, estimativas do estoque de carbono nas pastagens do bioma Cerrado; (3) informações do rebanho bovino brasileiro analisadas a partir dos dados da pesquisa pecuária municipal (IBGE); (4) séries temporais de classificação de uso e cobertura da terra por inspeção visual de dados dos satélites Landsat; (5) avaliação da condição das pastagens em campanhas de campo realizadas por equipes do laboratório.
+            </p>
           </div>
         </div>
       </div>
