--- a/src/client/src/assets/site/style.css
+++ b/src/client/src/assets/site/style.css
@@ -11333,7 +11333,7 @@ input:checked+.mode-container i.gg-moon {
   display: none;
 }
 
-/* .cont-ser-position {
+/* .contser-position {
   color: #fff;
 } */
 
@@ -12050,7 +12050,7 @@ nav ul li a:hover {
 }
 
 .nav-fixed .navbar-expand-lg .navbar-nav .nav-link {
-  color:white;
+  color: white;
 }
 
 .nav-fixed .navbar-brand {
@@ -12063,8 +12063,8 @@ nav ul li a:hover {
 
 .nav-fixed .navbar-expand-lg .navbar-nav .nav-item.active .nav-link,
 .nav-fixed .navbar-expand-lg .navbar-nav .nav-link:hover {
-  color: var(--primary-color);
-  border-bottom: 1px solid var(--primary-color);
+  color: var(--primary-color) !important;
+  border-bottom: 1px solid var(--primary-color) !important;
 }
 
 .navbar .search-right {
@@ -12274,7 +12274,7 @@ button.search-btn:hover {
   .cont-ser-position {
     position: absolute;
     right: 50px;
-    top: 8px;
+    top: 30px;
   }
 
   .navbar {
@@ -14905,5 +14905,12 @@ iframe {
 .navbar-brand img {
   height: 3.5em!important;
 }
+
+.navbar-expand-lg .navbar-nav .nav-item.active .nav-link {
+  color: var(--primary-color) !important;
+  border-bottom: 1px solid var(--primary-color) !important;
+}
+
+
 
 /* //shortcodes page */
